made  creating gradients and editing their names possible.
